<resources>

    <string name="app_name">ProjetoTCC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to login -->
    <string name="hint_name">Nome do Usuário</string>
    <string name="hint_email">E-mail do Usuário</string>
    <string name="hint_phone_number">Número de telefone</string>
    <string name="hint_verification_code">Código de verificação</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name_definition">Nome da Definição:</string>
    <string name="hint_nav_header_desc">Navigation header</string>

    <string name="text_email">E-mail:</string>
    <string name="text_password">Senha:</string>
    <string name="text_phone_number">Número de telefone:</string>
    <string name="text_verification_code">Código de verificação:</string>
    <string name="text_user_id">User ID:</string>
    <string name="text_email_password_title">Email and Password</string>
    <string name="text_email_password_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="text_facebook_title">Facebook Login</string>
    <string name="text_facebook_status_fmt">Facebook User: %s</string>
    <string name="text_firebase_status_fmt">Firebase User: %s</string>
    <string name="text_google_title">Google Sign In</string>
    <string name="text_google_status_fmt">Google User: %s</string>

    <string name="desc_icon_app">Firebase logo and email</string>

    <string name="action_create_account">Criar Conta</string>
    <string name="action_send_link">Enviar Link</string>
    <string name="action_verify_email">Verificar Email</string>
    <string name="action_sign_in_register">Entrar ou Registrar</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_out">Sair</string>
    <string name="action_connect">Conectar</string>
    <string name="action_disconnect">Desconectar</string>
    <string name="action_run">Executar</string>
    <string name="action_stop">Parar</string>
    <string name="action_settings">Opções</string>
    <string name="action_save">Salvar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_update">Atualizar</string>
    <string name="action_control">Controle Remoto</string>

    <string name="status_signed_in">Conectado</string>
    <string name="status_signed_out">Desconectado</string>
    <string name="status_loading">Carregando…</string>
    <string name="status_code_sent">Código Enviado!</string>
    <string name="status_verification_succeeded">Verificação Bem Sucedida!</string>
    <string name="status_permission_rationale">
        "As permissões de contatos são necessárias para fornecer conclusões de email."
    </string>
    <string name="status_navigation_drawer_open">Open navigation drawer</string>
    <string name="status_navigation_drawer_close">Close navigation drawer</string>

    <string name="error_invalid_email">Esse endereco de e-mail é inválido.</string>
    <string name="error_invalid_password">Essa senha é muito curta.</string>
    <string name="error_incorrect_email">Este e-mail não existe.</string>
    <string name="error_incorrect_password">Esta senha está incorreta.</string>
    <string name="error_field_required">Este campo é obrigatório.</string>
    <string name="error_verification_failed">Falha na Verificação.</string>
    <string name="error_sign_in_failed">Falha na Conexão.</string>
    <string name="error_auth_failed">Falha na Autenticação.</string>
    <string name="error_message_email">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_message_password">The password is invalid or the user does not have a password.</string>


    <!-- String for spinners -->
    <string-array name="spinner_marca">
        <item>Lg</item>
        <item>Samsung</item>
        <item>Sony</item>
    </string-array>

    <string-array name="spinner_modelo">
        <item>teste 1</item>
        <item>teste 2</item>
        <item>teste 3</item>
    </string-array>

    <string-array name="spinner_tipo">
        <item>Ar-Condicionado</item>
        <item>Datashow</item>
        <item>Tv</item>
    </string-array>

</resources>
